--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "mongoose": "^7.4.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
