--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "private": true,
     "license": "UNLICENSED",
     "scripts": {
-
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
@@ -22,21 +21,20 @@
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
+        "@nestjs/config": "^3.0.1",
         "@nestjs/core": "^10.0.0",
-        "@nestjs/jwt": "^10.1.0",
+        "@nestjs/jwt": "^10.1.1",
         "@nestjs/mapped-types": "*",
         "@nestjs/mongoose": "^10.0.1",
         "@nestjs/passport": "^10.0.1",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.1.8",
         "@nestjs/throttler": "^4.2.1",
-        "bcrypt": "^5.1.1",
+        "argon2": "^0.31.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "mongoose": "^7.4.4",
-        "passport": "^0.6.0",
         "passport-jwt": "^4.0.1",
-        "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1"
     },
